@@ -186,6 +186,8 @@ instance Binary a => Binary (Err' a) where
                                  put f
   put (NoValidAlts ns) = do putWord8 41
                             put ns
+  put (RunningElabScript e) = do putWord8 42
+                                 put e
 
   get = do i <- getWord8
            case i of
@@ -256,6 +258,7 @@ instance Binary a => Binary (Err' a) where
              40 -> do x <- get ; y <- get
                       return $ UnknownImplicit x y
              41 -> fmap NoValidAlts get
+             42 -> fmap RunningElabScript get
              _ -> error "Corrupted binary data for Err'"
 ----- Generated by 'derive'
 
