@@ -291,6 +291,7 @@ data Err' t
           | ElabScriptDebug [ErrorReportPart] t [(Name, t, [(Name, Binder t)])]
             -- ^ User-specified message, proof term, goals with context (first goal is focused)
           | ElabScriptStuck t
+          | RunningElabScript (Err' t) -- ^ The error occurred during a top-level elaboration script
   deriving (Eq, Functor, Data, Typeable)
 
 type Err = Err' Term
